<resources>
    <string name="app_name">Bentala</string>
    <string name="desc_app">Soil Detector App</string>
    <string name="welcome">Welcome</string>
    <string name="featured">Our Featured</string>
    <string name="bentala_logo">Bentala Logo</string>
    <string name="cek_tanah">Cek Jenis Tanah</string>
    <string name="version">version 1.0</string>
    <string name="hasil">Hasil</string>
    <string name="foto">Foto</string>
    <string name="File">File</string>
    <string name="predic">Prediction</string>
    <string name="result">Result Description</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="heading1_title">Apa itu Bentala ?</string>
    <string name="heading2_title">Tingkatkan hasil pertanian Anda</string>
    <string name="heading3_title">Mudah Digunakan</string>
    <string name="heading1_sub">Bentala adalah aplikasi pendeteksi jenis
tanah yang memiliki aksesibilitas mudah
hanya dengan menggunakan smartphone anda</string>
    <string name="heading2_sub">Bentala mampu mengetahui jenis tanah
    sehingga anda dapat menyesuaikan dengan
        jenis tanaman yang sesuai</string>
    <string name="heading3_sub">Bentala di rancang dengan mempertimbangkan
        segala aspek yang dibutuhkan oleh pengguna</string>
    <string name="btnLanjut">Lanjut</string>
    <string name="btnSkip">Lewati</string>
    <string name="btnReady">Ya, Saya Mengerti</string>
    <string name="imgOnBoard1">Gambar On Board 1</string>
    <string name="imgOnBoard2">Gambar On Board 2</string>
    <string name="imgOnBoard3">Gambar On Board 3</string>
    <string name="cara_title">Cara Penggunaan</string>
    <string name="cara1">1. Silahkan memilih fitur yang telah disediakan</string>
    <string name="cara2">2. Pada tahapan selanjutnya pengguna di haruskan untuk mengambil gambar dengan cara klik icon Foto atau juga dapat melakukan pengambilan file yang berada pada galery dengan klik icon file</string>
    <string name="cara3">3. Tunggu hingga gambar selesai di proses</string>
    <string name="cara4">4. Jika sudah selesai hasil dapat dilihat pada bagian bawah</string>
    <string name="cara5">5. Ulangi lagi tahapan proses untuk melakukan cek jenis tanah lagi</string>
</resources>