<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/onBoardOne"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".view.onboard.OneActivity">

    <ImageView
        android:id="@+id/imageOnBoard1"
        android:layout_width="360dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004"
        app:srcCompat="@drawable/ic_asset_onboard_1"
        android:contentDescription="@string/imgOnBoard1" />

    <TextView
        android:id="@+id/textTitleOne"
        style="@style/BentalaHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/heading1_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/imageOnBoard1"
        app:layout_constraintStart_toStartOf="@+id/imageOnBoard1"
        app:layout_constraintTop_toBottomOf="@+id/imageOnBoard1" />

    <TextView
        android:id="@+id/textSubOne"
        style="@style/BentalaSubs"
        android:layout_width="390dp"
        android:layout_height="87dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/heading1_sub"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnLanjut"
        app:layout_constraintEnd_toEndOf="@+id/textTitleOne"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/textTitleOne"
        app:layout_constraintTop_toBottomOf="@+id/textTitleOne"
        app:layout_constraintVertical_bias="0.221" />

    <Button
        android:id="@+id/btnLanjut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="124dp"
        android:background="@drawable/custom_shape1"
        android:text="@string/btnLanjut"
        android:textColor="#2E7D32"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSkip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/custom_shape3"
        android:text="@string/btnSkip"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnLanjut"
        app:layout_constraintStart_toStartOf="@+id/btnLanjut"
        app:layout_constraintTop_toBottomOf="@+id/btnLanjut" />

</androidx.constraintlayout.widget.ConstraintLayout>